<resources>
    <string name="app_name">opcodeApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="event_waiting_list">Event Waiting List</string>
    <string name="lottery_selection_guidelines">Lottery Selection Guidelines</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="view_final_list_of_enrolled_users">View Final List of Enrolled Users</string>
    <string name="enrolled_users_fragment_label">Enrolled Users Fragment</string>
    <string name="final_organizer_event_fragment_label">Final Organizer Event Fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="event">Event</string>
    <string name="profile">Profile</string>
    <string name="event_name">Event Name</string>
    <string name="your_status_waitlisted">Your Status: waitlisted</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="location">Location</string>
    <string name="price_if_exists">Price (if exists)</string>
    <string name="registration_closes_soon">Registration closes soon</string>
    <string name="open_closed">OPEN/CLOSED</string>
    <string name="total_entrants_on_the_waiting_list">Total entrants on the waiting list</string>
    <string name="description">Description</string>
    <string name="leave_the_draw">Leave the draw</string>
    <string name="block_notifications">Block notifications</string>
    <string name="search">Search</string>
    <string name="search_events">Search events</string>
    <string name="search_events_list">Search</string>
    <string name="filter_available_now">Available now</string>
    <string name="filter_has_capacity">Has capacity</string>
    <string name="qr_code">QR Code</string>
    <string name="status">Status</string>
    <string name="enrolled_users">Enrolled Users</string>
    <string name="invited_users">Invited Users</string>
    <string name="applicants">Applicants</string>
    <string name="would_you_like_to_remove_the_applicant">Would you like to remove the applicant?</string>
    <string name="view_all_the_invited_users">View all the invited users</string>
    <string name="view_all_applicants">View all applicants</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="user_name">Name</string>
    <string name="role">Role</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="comments_fragment_label">Comments</string>
    <string name="phone">Phone Number (optional)</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="scan">Scan</string>
    <string name="notifications">Notifications</string>
</resources>
