<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="35dp"
    android:background="@color/profile_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/event_name_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/event_name"
                android:textColor="@color/profile_text"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/event_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/date_amp_time"
            android:textColor="#6A6A6A"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/event_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/location"
            android:textColor="#6A6A6A"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/event_price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/price_if_exists"
            android:textColor="#6A6A6A"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/event_reg_close_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/registration_closes_soon"
            android:textColor="#6A6A6A"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/event_open_closed_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/open_closed"
            android:textColor="#6A6A6A"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/event_description_text"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/description"
            android:textColor="#6A6A6A"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="#F5F5F5"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageButton
                android:id="@+id/btn_comment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Comment Section"
                android:src="@drawable/ic_comment_icon"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/event_waitlist_count_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Waitlist Count: 0"
                android:textAlignment="center"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_qr_code"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Lottery Rules"
                android:src="@drawable/ic_qr_code_scan_icon"
                app:tint="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/enrolled_users_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/profile_button"
            android:text="@string/view_final_list_of_enrolled_users"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/invited_users_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/profile_button"
            android:text="@string/view_all_the_invited_users"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/all_applicants_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/profile_button"
            android:text="@string/view_all_applicants"
            android:textColor="@android:color/white" />


    </LinearLayout>

</ScrollView>