<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="165dp"
        android:layout_height="34dp"

        android:text="@string/user_name"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/user_comment"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:text="@string/comment"
        android:textAlignment="viewStart"
        android:textStyle="bold" />

</LinearLayout>