<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/launchFragment">

    <fragment
        android:id="@+id/launchFragment"
        android:name="com.example.opcodeapp.LaunchFragment"
        tools:layout="@layout/fragment_launch" >
        <action
            android:id="@+id/action_launchFragment_to_main_graph"
            app:destination="@id/main_graph" />
        <action
            android:id="@+id/action_launchFragment_to_setup_graph"
            app:destination="@id/setup_graph" />
    </fragment>

    <navigation
        android:id="@+id/setup_graph"
            app:startDestination="@id/setupFragment">
        <fragment
            android:id="@+id/setupFragment"
            android:name="com.example.opcodeapp.SetupFragment"
            tools:layout="@layout/fragment_setup" >
            <action
                android:id="@+id/action_setupFragment_to_main_graph"
                app:destination="@id/main_graph" />
        </fragment>
    </navigation>
    <navigation
        android:id="@+id/main_graph"
        app:startDestination="@id/FirstFragment">
        <fragment
            android:id="@+id/FirstFragment"
            android:name="com.example.opcodeapp.FirstFragment"
            android:label="@string/first_fragment_label"
            tools:layout="@layout/fragment_first">

            <action
                android:id="@+id/action_FirstFragment_to_SecondFragment"
                app:destination="@id/SecondFragment" />
        </fragment>
        <fragment
            android:id="@+id/SecondFragment"
            android:name="com.example.opcodeapp.SecondFragment"
            android:label="@string/second_fragment_label"
            tools:layout="@layout/fragment_second">
            <action
                android:id="@+id/action_SecondFragment_to_FirstFragment"
                app:destination="@id/FirstFragment" />
        </fragment>

        <fragment
            android:id="@+id/EnrolledUsersFragment"
            android:name="com.example.opcodeapp.EnrolledUsersFragment"
            android:label="@string/enrolled_users"
            tools:layout="@layout/fragment_enrolled_users">

            <argument
                android:name="userList"
                app:argType="com.example.opcodeapp.User[]" />
        </fragment>

        <fragment
            android:id="@+id/ApplicantFragment"
            android:name="com.example.opcodeapp.ApplicantsFragment"
            android:label="@string/applicants"
            tools:layout="@layout/fragment_applicants">

            <argument
                android:name="userList"
                app:argType="com.example.opcodeapp.User[]" />
        </fragment>

        <fragment
            android:id="@+id/InvitedUsersFragment"
            android:name="com.example.opcodeapp.InvitedUsersFragment"
            android:label="@string/invited_users"
            tools:layout="@layout/fragment_invited_users">

            <argument
                android:name="event"
                app:argType="com.example.opcodeapp.Event" />
        </fragment>
        <fragment
            android:id="@+id/EntrantEventDetailsFragment"
            android:name="com.example.opcodeapp.EntrantEventDetailsFragment"
            android:label="Event Details"
            tools:layout="@layout/fragment_entrant_event_details">

            <action
                android:id="@+id/action_EntrantEventDetails_to_WaitList"
                app:destination="@id/WaitListFragment" />

            <argument
                android:name="EVENT"
                app:argType="com.example.opcodeapp.Event" />
            <argument
                android:name="CURRENT_USER"
                app:argType="com.example.opcodeapp.User" />
        </fragment>
        <fragment
            android:id="@+id/WaitListFragment"
            android:name="com.example.opcodeapp.WaitListFragment"
            android:label="Waitlist"
            tools:layout="@layout/waitlist_screen">
            <argument
                android:name="EVENT"
                app:argType="com.example.opcodeapp.Event" />
            <argument
                android:name="CURRENT_USER"
                app:argType="com.example.opcodeapp.User" />
        </fragment>
        <fragment
            android:id="@+id/ProfileFragment"
            android:name="com.example.opcodeapp.ProfileFragment"
            android:label="My Profile"
            tools:layout="@layout/fragment_profile">

            <argument
                android:name="CURRENT_USER"
                app:argType="com.example.opcodeapp.User" />
        </fragment>
    </navigation>
</navigation>